Add hello world to html

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
+  <h1>Hello World</h1>
     <!-- Create a header element.  -->
 
     <!-- Inside the header, add an <h1> element containing your name -->
