Add a list of fun facts

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,3 +1,7 @@
+<!--
+html
+Hyper Text Markup Language
+-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,14 +14,23 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-  <h1>Hello World</h1>
+  <!-- Level 1 Heading Element -->
+    <h1>Hello World</h1>
     <!-- Create a header element.  -->
 
     <!-- Inside the header, add an <h1> element containing your name -->
 
     <!-- Include an image -->
+    <img src="../excited.gif" />
+
+    <img src="../hacker.gif" />
 
     <!-- Create an unordered list with 3 list items of fun facts about you -->
+    <ul>
+      <li>Item A</li>
+      <li>Item B</li>
+      <li>Item C</li>
+    </ul>
 
     <!-- Create a footer element. -->
 
